--- a/app/src/main/res/layout/activity_lista_bebidas.xml
+++ b/app/src/main/res/layout/activity_lista_bebidas.xml
@@ -5,7 +5,7 @@
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListaDrinksActivity">
+    tools:context=".cenario_lista.ListaDrinksActivity">
 
     <FrameLayout
         android:layout_width="match_parent"
