--- a/app/src/main/res/layout/drink_item_lista.xml
+++ b/app/src/main/res/layout/drink_item_lista.xml
@@ -24,20 +24,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:textSize="20sp"
+        android:textSize="16sp"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
+        android:textStyle="bold"
         android:text="@string/nome"/>
 
-        <TextView
-            android:id="@+id/tvDescricao"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:text="@string/descri_o"
-            />
 
     </LinearLayout>
 
